<?xml version="1.0"?>
<package format="2">
  <name>handan</name>
  <version>0.0.0</version>
  <description>The handan package</description>
  <maintainer email="boxman@todo.todo">boxman</maintainer>
  <license>Copyright (c), Panasonic Corporation</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export></export>
</package>
